--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "drv2605"
-version = "0.1.0"
+version = "0.2.0"
+edition = "2021"
 authors = ["Wez Furlong"]
 keywords = ["embedded-hal-driver"]
 categories = ["embedded", "no-std", "hardware-support", "haptic"]
@@ -10,11 +11,11 @@ readme = "README.md"
 repository = "https://github.com/wez/drv2605"
 
 [dependencies]
-embedded-hal = "~0.2"
+embedded-hal = "^1.0"
 bitfield = "~0.13"
 
 [dev-dependencies]
-metro_m0 = { version="0.1.0", path = "../atsamd21-rs/metro_m0" }
+metro_m0 = "0.1.0"
 cortex-m = "~0.5"
 panic_rtt = "~0.1"
 cortex-m-rt = "~0.5"
